--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-tele-bot-api",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Telegram Bot API",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -27,7 +27,7 @@
   "main": "src/index.js",
   "exports": {
     ".": {
-      "default": "./src/telegram.js"
+      "default": "./src/nodeTeleBotAPI.js"
     },
     "./types": {
       "default": "./src/types/index.js"
